// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadEmbargoDate should render disabled 1`] = `
<ForwardRef
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  allowKeyboardControl={true}
  autoOk={true}
  disabled={true}
  format="DD/MM/YYYY"
  keyboard={true}
  keyboardIcon={<pure(EventIcon) />}
  leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should render with default setup 1`] = `
<ForwardRef
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  allowKeyboardControl={true}
  autoOk={true}
  format="DD/MM/YYYY"
  keyboard={true}
  keyboardIcon={<pure(EventIcon) />}
  leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 1`] = `
<ForwardRef
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  allowKeyboardControl={true}
  autoOk={true}
  format="DD/MM/YYYY"
  keyboard={true}
  keyboardIcon={<pure(EventIcon) />}
  leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
  value={2016-01-01T00:00:00.000Z}
/>
`;

exports[`Component FileUploadEmbargoDate should set correct date on date changed 2`] = `
<ForwardRef
  InputProps={
    Object {
      "classes": Object {
        "root": "",
      },
      "disableUnderline": true,
    }
  }
  allowKeyboardControl={true}
  autoOk={true}
  format="DD/MM/YYYY"
  keyboard={true}
  keyboardIcon={<pure(EventIcon) />}
  leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
  minDate={2016-01-01T00:00:00.000Z}
  onChange={[Function]}
  rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
  value={2016-01-01T00:00:00.000Z}
/>
`;
